--- a/SQL/InsertTableData/InsertTableData/InsertTableData.csproj
+++ b/SQL/InsertTableData/InsertTableData/InsertTableData.csproj
@@ -22,4 +22,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Configuration\appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
