--- a/.gitignore
+++ b/.gitignore
@@ -336,8 +336,8 @@ ASALocalRun/
 
 #For Python
 *.idea
-/KNNGrpahs
-/NNGrpahs
+/KNNGrpahs/
+resources/PartTwo/NNGrpahs/
 #KResults_*
 
 #chromedriver
