--- a/.gitignore
+++ b/.gitignore
@@ -336,9 +336,8 @@ ASALocalRun/
 
 #For Python
 *.idea
-/resources/PartTwo/KNNGrpahs/*
-/resources/PartTwo/NNGrpahs/*
-#KResults_*
+*.png
+KResults_*
 
 #chromedriver
 chromedriver
@@ -348,4 +347,5 @@ chromedriver
 .bbl
 .blg
 .gz
+!/Report/Resources
 
