added to the requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ dateparser
 pytest
 pandas
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz
+
+pyodbc
+matplotlib
+webdriver_manager
